--- a/polygon/package.json
+++ b/polygon/package.json
@@ -6,7 +6,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
-    "hardhat": "^2.14.1"
+    "hardhat": "^2.20.1"
   },
   "dependencies": {
     "@axelar-network/axelar-gmp-sdk-solidity": "^3.3.0",
@@ -20,6 +20,7 @@
     "miscreant": "^0.3.2",
     "secp256k1": "^5.0.0",
     "secretjs": "^1.12.0",
-    "secure-random": "1.1.2"
+    "secure-random": "1.1.2",
+    "web3": "^4.5.0"
   }
 }
