--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-CONTRACT_ADDRESS=0x93087083b4b109B8CB4760FfB075978372B8C2E5
+REACT_APP_CONTRACT_ADDRESS="0x30a3a40FCDD904C32f0eBC2B05aC7082db0A7a6a"
